# octopus

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  404.html  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NEWS.md  README.md  TODO.md  index.html  install.py  make.py  sitemap.xml  test.py  variant_tests.h
lib/date/: CMakeLists.txt  tz.cpp  tz.h
lib/ranger/: CMakeLists.txt  Data.h  Forest.cpp  Forest.h  ForestClassification.cpp  ForestClassification.h  ForestProbability.cpp  ForestProbability.h  ForestRegression.cpp  ForestRegression.h  ForestSurvival.cpp  ForestSurvival.h  utility.h
lib/tandem/: CMakeLists.txt  tandem.cpp  tandem.hpp
lib/tandem/libdivsufsort/: CMakeLists.txt  divsufsort_private.h
src/: CMakeLists.txt  align.c  align.cpp  align.h  align.hpp  aligned_read.cpp  aligned_read.h  aligned_read.hpp  aligned_read_builder.cpp  aligned_read_builder.hpp  alignment_candidate_variant_generator.cpp  alignment_candidate_variant_generator.h  alignment_candidate_variant_generator.hpp  allele.cpp  allele.h  allele.hpp  append.hpp  assembler.cpp  assembler.h  assembler.hpp  assembler_candidate_variant_generator.cpp  assembler_candidate_variant_generator.h  assembler_candidate_variant_generator.hpp  banded_simd_viterbi.cpp  banded_simd_viterbi.hpp  basic_caller.cpp  basic_caller.h  basic_caller.hpp  basic_haplotype_prior_model.cpp  basic_haplotype_prior_model.h  basic_haplotype_prior_model.hpp  bayesian_genotype_model.h  caching_fasta.cpp  caching_fasta.h  caching_fasta.hpp  call.cpp  call.hpp  call_types.hpp  caller.cpp  caller.hpp  (+439 more)
src/basics/: aligned_read.cpp  aligned_read.hpp  aligned_template.cpp  aligned_template.hpp  cigar_string.cpp  cigar_string.hpp  contig_region.hpp  genomic_region.hpp  mappable_reference_wrapper.hpp  pedigree.cpp  pedigree.hpp  phred.hpp  ploidy_map.cpp  ploidy_map.hpp  read_pileup.cpp  read_pileup.hpp  tandem_repeat.cpp  tandem_repeat.hpp  trio.cpp  trio.hpp
src/concepts/: comparable.hpp  equitable.hpp  indexed.hpp  mappable.hpp  mappable_range.hpp
src/config/: cmake_config.h.in  common.cpp  common.hpp  config.cpp  config.hpp  octopus_vcf.cpp  octopus_vcf.hpp  option_collation.cpp  option_collation.hpp  option_parser.cpp  option_parser.hpp  system.h.in  version.h.in
src/containers/: mappable_block.hpp  mappable_flat_multi_set.hpp  mappable_flat_set.hpp  mappable_map.hpp  matrix_map.hpp  probability_matrix.hpp
src/core/: calling_components.cpp  calling_components.hpp  octopus.cpp  octopus.hpp
src/core/callers/: caller.cpp  caller.hpp  caller_builder.cpp  caller_builder.hpp  caller_factory.cpp  caller_factory.hpp  cancer_caller.cpp  cancer_caller.hpp  cell_caller.cpp  cell_caller.hpp  family_caller.cpp  family_caller.hpp  individual_caller.cpp  individual_caller.hpp  polyclone_caller.cpp  polyclone_caller.hpp  population_caller.cpp  population_caller.hpp  prokaryote_caller.cpp  prokaryote_caller.hpp  trio_caller.cpp  trio_caller.hpp
src/core/models/: haplotype_likelihood_array.cpp  haplotype_likelihood_array.hpp  haplotype_likelihood_cache.cpp  haplotype_likelihood_cache.hpp  haplotype_likelihood_model.cpp  haplotype_likelihood_model.hpp
src/core/tools/: bad_region_detector.cpp  bad_region_detector.hpp  bam_realigner.cpp  bam_realigner.hpp  coretools.hpp  haplotype_filter.cpp  haplotype_filter.hpp  indel_profiler.cpp  indel_profiler.hpp  read_assigner.cpp  read_assigner.hpp  read_realigner.cpp  read_realigner.hpp  vcf_header_factory.cpp  vcf_header_factory.hpp  vcf_record_factory.cpp  vcf_record_factory.hpp
src/core/types/: allele.cpp  allele.hpp  cancer_genotype.cpp  cancer_genotype.hpp  genotype.cpp  genotype.hpp  haplotype.cpp  haplotype.hpp  indexed_haplotype.hpp  partitioned_genotype.hpp  pedigree.cpp  pedigree.hpp  phylogeny.cpp  phylogeny.hpp  shared_haplotype.hpp  trio.cpp  trio.hpp  variant.cpp  variant.hpp
src/exceptions/: error.cpp  error.hpp  error_handler.cpp  error_handler.hpp  file_open_error.cpp  file_open_error.hpp  malformed_file_error.cpp  malformed_file_error.hpp  missing_file_error.cpp  missing_file_error.hpp  missing_index_error.cpp  missing_index_error.hpp  program_error.hpp  system_error.hpp  unimplemented_feature_error.cpp  unimplemented_feature_error.hpp  unwritable_file_error.cpp  unwritable_file_error.hpp  user_error.hpp
src/interfaces/: comparable.hpp  equitable.hpp  mappable.hpp
src/io/pedigree/: pedigree_reader.cpp  pedigree_reader.hpp
src/io/read/: annotated_aligned_read.cpp  annotated_aligned_read.hpp  buffered_read_writer.cpp  (+10 more)
src/logging/: error_handler.cpp  error_handler.hpp  logging.cpp  logging.hpp  main_logging.cpp  main_logging.hpp  progress_meter.cpp  progress_meter.hpp
src/readpipe/: buffered_read_pipe.cpp  buffered_read_pipe.hpp  read_pipe.cpp  read_pipe.hpp  read_pipe_fwd.hpp
src/utils/: append.hpp  array_tricks.hpp  beta_distribution.hpp  compression.cpp  compression.hpp  concat.hpp  coverage_tracker.cpp  coverage_tracker.hpp  emplace_iterator.hpp  erase_if.hpp  free_memory.hpp  genotype_reader.cpp  genotype_reader.hpp  hash_functions.hpp  input_reads_profiler.cpp  input_reads_profiler.hpp  k_medoids.hpp  kmer_mapper.cpp  kmer_mapper.hpp  map_utils.hpp  mappable_algorithms.hpp  mappable_ranges.hpp  maths.hpp  matrix_map.hpp  memory_footprint.cpp  memory_footprint.hpp  merge_transform.hpp  parallel_transform.hpp  path_utils.cpp  path_utils.hpp  probability_matrix.hpp  random_select.hpp  read_algorithms.cpp  read_algorithms.hpp  read_duplicates.cpp  read_duplicates.hpp  read_size_estimator.cpp  read_size_estimator.hpp  read_stats.cpp  read_stats.hpp  (+15 more)
test/unit/: CMakeLists.txt  assembler_tests.cpp  candidate_variant_generation_tests.cpp  genome_walker_tests.cpp  genotype_tests.cpp  haplotype_phaser_tests.cpp  haplotype_tests.cpp  haplotype_tree_tests.cpp  mappable_algorithm_tests.cpp  mappable_tests.cpp  options_tests.cpp  read_filter_tests.cpp  read_manager_tests.cpp  read_pipe_tests.cpp  read_tests.cpp  read_transform_tests.cpp  reference_tests.cpp  unit_test.cpp  unit_test_main.cpp  variant_caller_tests.cpp  variant_tests.cpp  vcf_tests.cpp
(+1049 files in other folders)
